--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "main"
   ],
   "dependencies": {
-    "cwd": "^0.6.0",
+    "look-up": "^0.7.1",
     "require-module": "^0.1.0",
     "resolve": "^1.1.6"
   },
