Ensure "main" is always treated as a relative path
Handles ambiguous case of "main": "src"

Closes #1

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "main"
   ],
   "dependencies": {
+    "dot-slash": "~1.1.0",
     "look-up": "^0.7.1",
     "require-module": "^0.1.0",
     "resolve": "^1.1.6"
