Use find-main and mothership

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "main"
   ],
   "dependencies": {
-    "dot-slash": "~1.1.0",
-    "look-up": "^0.7.1",
+    "find-main": "~1.0.1",
+    "mothership": "~0.3.0",
     "require-module": "^0.1.0",
     "resolve": "^1.1.6"
   },
