Use find-main@2 to eliminate direct mothership, resolve deps

--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "main"
   ],
   "dependencies": {
-    "find-main": "~1.0.1",
-    "mothership": "~0.3.0",
-    "require-module": "^0.1.0",
-    "resolve": "^1.1.6"
+    "find-main": "~2.0.1",
+    "require-module": "^0.1.0"
   },
   "devDependencies": {
     "babel": "^5.0.0",
