--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "require-relative-main",
-  "main": "./src",
+  "main": "index.js",
   "version": "1.1.3",
   "description": "require a module relative to the 'main' script",
   "license": "MIT",
@@ -14,7 +14,7 @@
     "node": ">=0.10.0"
   },
   "scripts": {
-    "test": "standard && babel-tape-runner test/*.js"
+    "test": "standard && tape test/*.js"
   },
   "keywords": [
     "require",
@@ -26,18 +26,11 @@
     "require-module": "^0.1.0"
   },
   "devDependencies": {
-    "babel": "^5.0.0",
-    "babel-tape-runner": "*",
     "tape": "^4.0.0",
-    "standard": "bendrucker/standard#babel",
-    "publicist": "~4.0.0",
-    "publicist-es5": "~1.0.0"
+    "standard": "^4.0.0"
   },
-  "publicist": {
-    "builds": {
-      "es5": {
-        "dest": "./release"
-      }
-    }
-  }
+  "files": [
+    "index.js",
+    "readme.md"
+  ]
 }
