--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "require-relative-main",
   "main": "index.js",
+  "browser": "browser.js",
   "version": "1.1.4",
   "description": "require a module relative to the 'main' script",
   "license": "MIT",
